media and orentation added to change background images

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     </div>
 
     <section class="background">
-      <img class="background__image" src="Mobile images/background1.jpg" alt="#">
+      <!-- <img class="background__image" src="Mobile images/background1.jpg" alt="#"> -->
       <img class="background__capture" src="Mobile images/Capture.png"alt="#">
       <img class="background__develop" src="Mobile images/Develop.png"alt="#">
-      <img class="background__create" src="Mobile images/Create.png∏"alt="#">
+      <img class="background__create" src="Mobile images/Create.png"alt="#">
     </section>
 
     <section class="hexs">
