images chnaged on all

--- a/index.html
+++ b/index.html
@@ -9,32 +9,35 @@
   </head>
   <body>
 
-    <div class="opening-hexs">
-      <img class="opening-hexs__grey" src="Mobile images/1grey.png" alt="#"> 
-      <img class="opening-hexs__me" src="Mobile images/mehex90.png" alt="#">
-      <img class="opening-hexs__pink" src="Mobile images/3pink.png" alt="#">
-    </div>
+   <header>
+      <div class="opening-hexs">
+        <img class="opening-hexs__grey" src="Mobile images/1grey.png" alt="#"> 
+        <img class="opening-hexs__me" src="Mobile images/mehex90.png" alt="#">
+        <img class="opening-hexs__pink" src="Mobile images/3pink.png" alt="#">
+      </div>
+    </header>
 
     <section class="background">
-      <!-- <img class="background__image" src="Mobile images/background1.jpg" alt="#"> -->
       <img class="background__capture" src="Mobile images/Capture.png"alt="#">
       <img class="background__develop" src="Mobile images/Develop.png"alt="#">
       <img class="background__create" src="Mobile images/Create.png"alt="#">
     </section>
 
-    <section class="hexs">
+    <section>
       <img class="hexs__jemmaholmes" src="Mobile images/Jemma-Holmes-Brush-Script.png">
-      <img class="hexs__hex12" src="Mobile images/12hex.png" alt="#">
-      <img class="hexs__hex1" src="Mobile images/Hexagons (1).png"alt="#">
+      <div class="hexs">
+        <img class="hexs__1" src="Mobile images/profilehex.png" alt="#">
+        <img class="hexs__2" src="Mobile images/profilehex.png" alt="#">
+        <img class="hexs__3" src="Mobile images/profilehex.png" alt="#">
+      </div>
     </section>
 
-    <section class="projects">
-      <img class="projects__project-home" src="Mobile images/Project-background.png">
+    <main class="projects">
       <button class="projects__projects" type="button">Projects</button>
       <button class="projects__project-one" type="button">Project One</button>
       <button class="projects__project-two" type="button">Project Two</button>
       <button class="projects__project-three" type="button">Project Three</button>
-    </section>
+    </main>
 
     <footer class="bottom-hexs"> 
         <a class="bottom-hexs__hex15" href="https://www.linkedin.com/in/jemma-holmes-14b89a10a/"><img src="Mobile images/Linkedin.png" alt="#"></a>
