Layout complete and orientation sorted

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     </section>
 
     <section>
-      <img class="hexs__jemmaholmes" src="Mobile images/Jemma-Holmes-Brush-Script.png">
+      <img src="Mobile images/Jemma-Holmes-Brush-Script.png">
       <div class="hexs">
-        <img class="hexs__1" src="Mobile images/profilehex.png" alt="#">
-        <img class="hexs__2" src="Mobile images/profilehex.png" alt="#">
-        <img class="hexs__3" src="Mobile images/profilehex.png" alt="#">
+        <img src="Mobile images/profilehex.png" alt="#">
+        <img src="Mobile images/profilehex.png" alt="#">
+        <img src="Mobile images/profilehex.png" alt="#">
       </div>
     </section>
 
