--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <img class="background__create" src="Mobile images/Create.png"alt="#">
     </section>
 
-    <section>
-      <img src="Mobile images/Jemma-Holmes-Brush-Script.png">
+    <section class="about">
+      <img Class="about__jemmaholmes"src="Mobile images/Jemma-Holmes-Brush-Script.png">
       <div class="hexs">
         <img src="Mobile images/profilehex.png" alt="#">
         <img src="Mobile images/profilehex.png" alt="#">
@@ -32,20 +32,18 @@
       </div>
     </section>
 
-    <main class="projects">
+    <section class="projects">
       <button class="projects__projects" type="button">Projects</button>
       <button class="projects__project-one" type="button">Project One</button>
       <button class="projects__project-two" type="button">Project Two</button>
       <button class="projects__project-three" type="button">Project Three</button>
-    </main>
+    </section>
 
-    <footer class="bottom-hexs"> 
-        <a class="bottom-hexs__hex15" href="https://www.linkedin.com/in/jemma-holmes-14b89a10a/"><img src="Mobile images/Linkedin.png" alt="#"></a>
-        <a class="bottom-hexs__hex16" href="https://www.instagram.com/jemma.j.photography/"><img src="Mobile images/Insta.png" alt="#"></a>
-        <a class="bottom-hexs__hex17" href=""><img src="Mobile images/JS.png" alt="#"></a>
-        <a class="bottom-hexs__hex18" href=""><img src="Mobile images/Bottompink.png" alt="#"></a>
-        <a class="bottom-hexs__hex19" href="https://github.com/Jemzzz16"><img src="Mobile images/Github.png" alt="#"></a>
-    </footer>
+    <section class="contact"> 
+        <a class="contact__linkedin" href="https://www.linkedin.com/in/jemma-holmes-14b89a10a/"><img src="Mobile images/Linkedin.png" alt="#"></a>
+        <a class="contact__instagram" href="https://www.instagram.com/jemma.j.photography/"><img src="Mobile images/Insta.png" alt="#"></a>
+        <a class="contact__github" href="https://github.com/Jemzzz16"><img src="Mobile images/Github.png" alt="#"></a>
+    </section>
 
   </body>
 </html>
