Organised code more and adjusted images

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
    <header>
       <div class="opening-hexs">
-        <img class="opening-hexs__grey" src="Mobile images/1grey.png" alt="#"> 
+        <img class="opening-hexs__grey" src="Mobile images/GreyHex.png" alt="#"> 
         <img class="opening-hexs__me" src="Mobile images/mehex90.png" alt="#">
-        <img class="opening-hexs__pink" src="Mobile images/3pink.png" alt="#">
+        <img class="opening-hexs__pink" src="Mobile images/PinkHex.png" alt="#">
       </div>
     </header>
 
@@ -40,9 +40,9 @@
     </section>
 
     <section class="contact"> 
-        <a class="contact__linkedin" href="https://www.linkedin.com/in/jemma-holmes-14b89a10a/"><img src="Mobile images/Linkedin.png" alt="#"></a>
-        <a class="contact__instagram" href="https://www.instagram.com/jemma.j.photography/"><img src="Mobile images/Insta.png" alt="#"></a>
-        <a class="contact__github" href="https://github.com/Jemzzz16"><img src="Mobile images/Github.png" alt="#"></a>
+        <a href="https://www.linkedin.com/in/jemma-holmes-14b89a10a/"><img class="contact__linkedin" src="Mobile images/Linkedin.png" alt="#"></a>
+        <a href="https://www.instagram.com/jemma.j.photography/"><img class="contact__instagram" src="Mobile images/Insta.png" alt="#"></a>
+        <a href="https://github.com/Jemzzz16"><img class="contact__github" src="Mobile images/Github.png" alt="#"></a>
     </section>
 
   </body>
