Updated colours and corrected positioning

--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
   </head>
   <body>
 
-   <header>
-      <div class="opening-hexs">
-        <img class="opening-hexs__grey" src="Mobile images/GreyHex.png" alt="#"> 
-        <img class="opening-hexs__me" src="Mobile images/mehex90.png" alt="#">
-        <img class="opening-hexs__pink" src="Mobile images/PinkHex.png" alt="#">
-      </div>
-    </header>
+    <section class="opening-hexs">
+      <img class="opening-hexs__grey" src="Mobile images/GreyHex.png" alt="#"> 
+      <img class="opening-hexs__me" src="Mobile images/mehex90.png" alt="#">
+      <img class="opening-hexs__pink" src="Mobile images/PinkHex.png" alt="#">
+    </section>
 
     <section class="background">
       <img class="background__capture" src="Mobile images/Capture.png"alt="#">
