commiting new things

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   <body>
 
     <section class="opening-hexs">
-      <img class="opening-hexs__grey" src="Mobile images/GreyHex.png" alt="#"> 
-      <img class="opening-hexs__me" src="Mobile images/mehex90.png" alt="#">
-      <img class="opening-hexs__pink" src="Mobile images/PinkHex.png" alt="#">
+      <div class='fade-in'>
+        <img class="opening-hexs__grey" src="Mobile images/GreyHex.png" alt="#"> 
+        <img class="opening-hexs__me" src="Mobile images/mehex90.png" alt="#">
+        <img class="opening-hexs__pink" src="Mobile images/PinkHex.png" alt="#">
+      </div>
     </section>
 
     <section class="background">
@@ -42,6 +44,6 @@
         <a href="https://www.instagram.com/jemma.j.photography/"><img class="contact__instagram" src="Mobile images/Insta.png" alt="#"></a>
         <a href="https://github.com/Jemzzz16"><img class="contact__github" src="Mobile images/Github.png" alt="#"></a>
     </section>
-
+    <script src="./main.js"></script>
   </body>
 </html>
